CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(ksfeeder VERSION 0.1.0)
MESSAGE("CMAKE_PROJECT_NAME = ${CMAKE_PROJECT_NAME}")

SET(PROJECT_PATH ${CMAKE_SOURCE_DIR})
SET(TARGET_NAME ${CMAKE_PROJECT_NAME})

FILE(GLOB ALL_KSFILE "./kitsprout/*.c" )
FILE(GLOB ALL_INCLUDE "kitsprout")

LINK_LIBRARIES(m)
ADD_EXECUTABLE(${TARGET_NAME}
    main.c
    online.c
    offline.c
    ksfeeder.c

    ${ALL_KSFILE}
)

ADD_DEFINITIONS(
    -DDEFAULE_LOGFILE="LOG_SAMSUNG_SMG973F_20210722_234221.csv"
    -DLOGOUT_RELATE_PATH="result/"
    -DLOGOUT_FILE_TAG="_result"
)

INCLUDE_DIRECTORIES(
    ${ALL_INCLUDE}
)
SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

ADD_CUSTOM_TARGET(run
    COMMAND ${TARGET_NAME}
)

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_PATH}/build"
)


